Adjust styling to reduce layout shifts and fix scrolling

--- a/privacyidea/static_new/src/app/components/event/event-panel/event-panel.component.scss
+++ b/privacyidea/static_new/src/app/components/event/event-panel/event-panel.component.scss
@@ -7,12 +7,14 @@
 
 .edit-event-handler-container {
   @include styles.table-container-styles;
-  @include styles.base-table-structure(".token-table", ".token-table-filter", ".table-scroll-container");
   max-height: 90vh;
   max-width: calc(100vw - var(--global-padding) * 5 - 48px);
   display: grid;
   overflow: auto;
-  position: relative;
+  position: fixed;
+  left: 297px + 32px;
+  top: 32px;
+  z-index: 1000;
 }
 
 .header-row {
