--- a/privacyidea/static_new/src/app/components/event/event-panel/tabs/event-conditions-tab/event-conditions-tab.component.scss
+++ b/privacyidea/static_new/src/app/components/event/event-panel/tabs/event-conditions-tab/event-conditions-tab.component.scss
@@ -1,5 +1,17 @@
 @use "../../../../../../styles" as styles;
 
+.conditions-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 32px;
+  width: 100%;
+}
+
+.condition-column {
+  flex: 1 1 0;
+}
+
 // override hover style for read only view to not change on hover
 .selected-actions-container .action-card:hover {
   background-color: var(--mat-sys-surface-container) !important;
@@ -8,8 +20,6 @@
 }
 
 .add-conditions-container {
-  max-width: calc(0.5 * (100vw - var(--global-padding) * 5 - 48px));;
-  min-width: 0;
   display: flex;
   flex-direction: column;
   gap: calc(var(--global-gap) / 2);
@@ -25,6 +35,14 @@
   align-self: center;
 }
 
-.max-height-selection {
-  max-height: 21.7rem;
+.add-conditions-list-container {
+  max-height: 22.1rem;
+  overflow-y: scroll;
+  margin-top: calc(var(--global-gap) / 2);
+}
+
+.configured-conditions-list-container {
+  max-height: 30rem;
+  overflow-y: scroll;
+  margin-top: calc(var(--global-gap) / 2);
 }
